feat: 校验代码格式
