# apps/backend-api/src/modules/user/dto/user.list.resp.dto.ts
@@ -2,6 +2,6 @@ import { BatchRespDto } from '@/dto/batch.dto'
 import { UserRespDto } from './user.resp.dto'
 import { ApiProperty } from '@nestjs/swagger'
 export class UserListRespDto extends BatchRespDto {
-  @ApiProperty({ description: '用户列表' })
+  @ApiProperty({ description: '用户列表', type: [UserRespDto] })
   list: UserRespDto[]
 }
